--- a/web/src/app/modules/custom/bohemian/menu/menu.component.html
+++ b/web/src/app/modules/custom/bohemian/menu/menu.component.html
@@ -2,7 +2,7 @@
   <div class="bohemian-handler clickable text-center" (click)="handle()">
     <img-loader imgSrc='{{ menuId }}' imgType='{{ imgType }}' imgHeight='96'></img-loader>
   </div>
-  <div class="bohemian-label">
+  <div class="bohemian-label text-inset">
     <span>{{ menuDisplayText }}</span>
   </div>
 </div>
