--- a/web/src/app/sakura/agartha/kingdom/content/event-wrapper/event-wrapper.component.scss
+++ b/web/src/app/sakura/agartha/kingdom/content/event-wrapper/event-wrapper.component.scss
@@ -1,8 +1,7 @@
 ::ng-deep .event-board-gold {
     padding: 10px;
     border-radius: 5px;
-    background: linear-gradient(to right, #3f5b6f 0%, #7d713c 90%);
-    border: 1.5px solid #d4c07c;
+    background: linear-gradient(to right, #3f5b6f 0%, #a27d4b 90%);
     min-height: 50px;
     box-shadow: 6px 6px 12px 1px #312d0e;
 }
